...
      <WizardValidationSummary isVisible={hasSubmitErrors} message={t('errorSummary')} />
      <Controller
        control={control}
        name="firstName"
        render={({ field }) => (
          <AuthTextField
            testID="onboarding-first-name"
            label={t('firstNameLabel')}
            value={field.value}
            onChangeText={field.onChange}
            onBlur={field.onBlur}
            isInvalid={Boolean(errors.firstName)}
            autoCapitalize="words"
...
      />
      <Controller
        control={control}
        name="lastName"
        render={({ field }) => (
          <AuthTextField
            testID="onboarding-last-name"
            label={t('lastNameLabel')}
            value={field.value}
            onChangeText={field.onChange}
            onBlur={field.onBlur}
            isInvalid={Boolean(errors.lastName)}
            autoCapitalize="words"
...
